@startuml

title __PATIENTFACTORY's Class Diagram__\n

  package com.hospital.Hospital {
    package com.hospital.Hospital.domainService.patientFactory {
      class ImportantPatientFactory {
          + createPatient()
      }
    }
  }
  

  package com.hospital.Hospital {
    package com.hospital.Hospital.domainService.patientFactory {
      interface PatientFactory {
          {abstract} + createPatient()
      }
    }
  }
  

  package com.hospital.Hospital {
    package com.hospital.Hospital.domainService.patientFactory {
      class SimplePatientFactory {
          + createPatient()
      }
    }
  }
  

  ImportantPatientFactory -up-|> PatientFactory
  SimplePatientFactory -up-|> PatientFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
